# email-classifier-server

./: .gitignore  Dockerfile  Procfile  README.md  pyproject.toml
src/: file_reader.py  models.py  preprocessor.py  server.py
src/llm/: client.py  prompts.py
src/services/: classification.py
tests/: llm_performance.py  load_testing_data.py
tests/mock_data/: productive_case_update.txt  productive_data_query.txt  productive_error_report.txt  productive_system_access.txt  productive_urgent_inquiry_2029.txt  unproductive_completely_unrelated.txt  unproductive_congratulations.txt  unproductive_lunch_invitation_9536.txt  unproductive_thanks.txt  unproductive_unrelated_question.txt
