[project]
name = "email-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "nltk>=3.9.1",
    "openai>=1.102.0",
    "pypdf>=6.0.0",
]

[dependency-groups]
dev = [
    "scikit-learn>=1.7.1",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["src", "tests"]
